[audio] Add simple-codec library
C++ implementation of the audio codec protocol for both servers and
clients to be used to facilitate simple codec drivers writing and usage.

Test: simple-codec-unittest

Change-Id: I45bd62c318d3cf534508653d4cc403154b3f3397

--- a/src/media/audio/lib/BUILD.gn
+++ b/src/media/audio/lib/BUILD.gn
@@ -9,6 +9,7 @@ group("lib") {
     "clock",
     "format",
     "logging",
+    "simple-codec",
     "test",
     "wav",
   ]
@@ -21,6 +22,7 @@ group("tests") {
     "clock:tests",
     "effects_loader:tests",
     "format:tests",
+    "simple-codec:tests",
     "wav:tests",
   ]
 }
