[audio][astro] Move Tas27xx code to codecs
Test: astro-audio-out-test
Change-Id: Ie7d72581f4c73e184ed92117bf0f4fa9f3e26fc2

--- a/src/media/audio/drivers/astro-tdm-output/test/BUILD.gn
+++ b/src/media/audio/drivers/astro-tdm-output/test/BUILD.gn
@@ -11,7 +11,7 @@ executable("astro-audio-out-test-bin") {
   testonly = true
   sources = [
     "../audio-stream-out.cc",
-    "../tas27xx.cc",
+    "../../codecs/tas27xx/tas27xx.cc",
     "test.cc",
   ]
   deps = [
