--- a/src/media/audio/drivers/astro-tdm-output/BUILD.gn
+++ b/src/media/audio/drivers/astro-tdm-output/BUILD.gn
@@ -12,7 +12,7 @@ driver_module("astro-tdm-output") {
   configs += [ "//build/unification/config:zircon-migrated" ]
   sources = [
     "audio-stream-out.cc",
-    "tas27xx.cc",
+    "../codecs/tas27xx/tas27xx.cc",
   ]
 
   deps = [
