--- a/src/devices/clock/drivers/amlogic-clk/BUILD.gn
+++ b/src/devices/clock/drivers/amlogic-clk/BUILD.gn
@@ -11,7 +11,10 @@ driver_module("amlogic-clk") {
   configs -= [ "//build/config/fuchsia:no_cpp_standard_library" ]
   configs += [ "//build/config/fuchsia:static_cpp_standard_library" ]
   configs += [ "//build/unification/config:zircon-migrated" ]
-  sources = [ "aml-clk.cc" ]
+  sources = [
+    "aml-clk.cc",
+    "aml-fclk-rates.cc",
+  ]
   deps = [
     "//sdk/banjo/ddk.protocol.clockimpl",
     "//sdk/banjo/ddk.protocol.platform.bus",
@@ -42,6 +45,7 @@ test("amlogic-clk-test") {
   sources = [
     "aml-clk-test.cc",
     "aml-clk.cc",
+    "aml-fclk-rates.cc",
   ]
   deps = [
     "//sdk/banjo/ddk.protocol.clockimpl",
