[block-verity] WIP on sealing
The tests seem to have issues with the final Seal, somehow.  Not sure
why the Seal is getting its tag reset.  Probably not holding some
object alive for long enough or something.

Fixed: 55710
Change-Id: Iba9ab61f0583f7418a9764ae7e723c4d5dbd5895

--- a/src/devices/block/drivers/block-verity/BUILD.gn
+++ b/src/devices/block/drivers/block-verity/BUILD.gn
@@ -33,6 +33,8 @@ driver_module("block-verity") {
     "device-manager.cc",
     "device.cc",
     "extra.cc",
+    "hash-block-accumulator.cc",
+    "sealer.cc",
   ]
 
   configs += [ "//build/config/fuchsia:integer-paranoia" ]
@@ -44,6 +46,9 @@ driver_module("block-verity") {
     "//src/devices/lib/driver",
     "//src/lib/ddk",
     "//src/lib/ddktl",
+    "//zircon/public/lib/zx",
+    "//zircon/public/lib/zxc",
+    "//zircon/system/ulib/digest",
   ]
 }
 
@@ -54,6 +59,7 @@ test("block-verity-test") {
     "//sdk/fidl/fuchsia.device:fuchsia.device_llcpp",
     "//sdk/fidl/fuchsia.hardware.block.verified:fuchsia.hardware.block.verified_llcpp",
     "//sdk/fidl/fuchsia.io:fuchsia.io_llcpp",
+    "//zircon/public/lib/pretty", # TODO: remove
     "//zircon/public/lib/zxtest",
     "//zircon/system/ulib/devmgr-integration-test",
     "//zircon/system/ulib/devmgr-launcher",
