--- a/src/devices/clock/drivers/amlogic-clk/BUILD.gn
+++ b/src/devices/clock/drivers/amlogic-clk/BUILD.gn
@@ -4,6 +4,7 @@
 
 import("//build/config/fuchsia/rules.gni")
 import("//build/test.gni")
+import("//build/test/test_package.gni")
 
 driver_module("amlogic-clk") {
   defines = [ "_ALL_SOURCE" ]
@@ -37,11 +38,7 @@ driver_module("amlogic-clk") {
 }
 
 test("amlogic-clk-test") {
-  # Dependent manifests unfortunately cannot be marked as `testonly`.
-  # Remove when converting this file to proper GN build idioms.
-  testonly = false
   configs += [ "//build/unification/config:zircon-migrated" ]
-  output_name = "amlogic-clk-test"
   sources = [
     "aml-clk-test.cc",
     "aml-clk.cc",
@@ -68,4 +65,21 @@ test("amlogic-clk-test") {
     "//zircon/public/lib/zx",
     "//zircon/public/lib/zxtest",
   ]
+}
+
+unittest_package("amlogic-clk-test-package") {
+  package_name = "amlogic-clk-test"
+  deps = [ ":amlogic-clk-test" ]
+
+  tests = [
+    {
+      name = "amlogic-clk-test"
+      environments = basic_envs
+    },
+  ]
+}
+
+group("tests") {
+  testonly = true
+  deps = [ ":amlogic-clk-test-package" ]
 }
