[aml][power][T931] Add AMLogic power driver.
Adds support for the AMLogic power driver and publishes the following
two power drivers:
 + ARM Big Core
 + ARM Little Core

These power drivers rely on the PWM driver which was previously bound
to the thermal driver. In order to accomodate this driver, the thermal
driver must temporarily be disabled.

Change-Id: I1bcd8327d7173f4f818e1de3802f791ffb42b26a

--- a/src/devices/board/drivers/sherlock/BUILD.gn
+++ b/src/devices/board/drivers/sherlock/BUILD.gn
@@ -41,6 +41,7 @@ template("sherlock_driver") {
       "sherlock-mali.cc",
       "sherlock-nna.cc",
       "sherlock-ot-radio.cc",
+      "sherlock-power.cc",
       "sherlock-pwm.cc",
       "sherlock-ram.cc",
       "sherlock-sdio.cc",
