--- a/src/devices/board/drivers/vim3/BUILD.gn
+++ b/src/devices/board/drivers/vim3/BUILD.gn
@@ -13,6 +13,7 @@ driver_module("vim3") {
     configs += [ "//build/unification/config:zircon-migrated" ]
   }
   sources = [
+    "vim3-audio.cc",
     "vim3-clk.cc",
     "vim3-emmc.cc",
     "vim3-eth.cc",
