--- a/sdk/fidl/fuchsia.hardware.clock/BUILD.gn
+++ b/sdk/fidl/fuchsia.hardware.clock/BUILD.gn
@@ -6,4 +6,5 @@ import("//build/fidl/fidl.gni")
 
 fidl("fuchsia.hardware.clock") {
   sources = [ "clock.fidl" ]
+  public_deps = [ "//zircon/vdso/zx" ]
 }
